# trial-django

./: .env.sample  .gitignore  README.md  docker-compose-common.yml  docker-compose.yml
code/: pyproject.toml
code/app1/management/commands/: exec_app1.py
code/app2/: ap_scheduler.py
code/config/: settings.py
code/etc/: environment
code/etc/httpd/: setup.sh
code/etc/httpd/conf.d/: code.conf
code/etc/httpd/conf.modules.d/: 50-code.conf
code/etc/systemd/: setup.sh
code/etc/systemd/system/: code.service  code.timer  code2.path  code2.service
code/etc/systemd/system/httpd.service.d/: override.conf
code/frontend/: package-lock.json  package.json  webpack.config.js
code/frontend/src/: index.js
containers/app/: .dockerignore  Dockerfile  docker-entrypoint.sh
containers/app/code/: Pipfile
containers/app/code/app2/: apps.py
containers/app/code/config/: settings.py
containers/jupyterlab/home/code/.jupyter/: jupyter_lab_config.py
containers/nginx/: Dockerfile
containers/nginx/etc/nginx/conf.d/: default.conf
containers/nginx/etc/ssl/private/: make_cert.sh
containers/sphinx/: Dockerfile  requirements.txt
doc/source/: conf.py  index.rst
docker/: docker-compose.yml
docker/app/: Dockerfile  docker-entrypoint.sh
docker/app/assets/: Pipfile  setup.sh
docker/nginx/: Dockerfile
docker/nginx/etc/ssl/private/: make_cert.sh
docs/source/: conf.py  index.rst
src/: Pipfile
src/main/config/: settings.py
