[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django~=5.2",
    "gunicorn~=25.1",
    "djangorestframework~=3.16",
    "apscheduler~=3.11",
    "mod_wsgi~=5.0",
    "pip",
]

[dependency-groups]
dev = [
    "pytest-django~=4.12",
    "pytest-mock~=3.15",
    "pytest-cov~=7.0",
    "ruff~=0.15",
    "jupyter~=1.1",
    "jupyterlab-language-pack-ja-JP~=4.5",
    "folium~=0.20",
    "skyfield~=1.54",
    "pip-audit",
]
