[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler~=3.11",
    "djangorestframework~=3.16",
    "django~=5.2",
    "gunicorn~=25.1",
    "mod_wsgi~=5.0",
    "pip",
]

[dependency-groups]
dev = [
    "folium~=0.20",
    "jupyterlab-language-pack-ja-JP~=4.5",
    "jupyter~=1.1",
    "pip-audit",
    "pytest-cov~=7.0",
    "pytest-django~=4.12",
    "pytest-mock~=3.15",
    "ruff~=0.15",
    "skyfield~=1.54",
]
