[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler~=3.11",
    "djangorestframework~=3.16",
    "django~=5.2",
    "gunicorn~=25.1",
    "mod_wsgi~=5.0",
    "pip",
]

[dependency-groups]
dev = [
    "folium~=0.20",
    "jupyterlab-language-pack-ja-JP~=4.5",
    "jupyter~=1.1",
    "pip-audit",
    "pytest-cov~=7.0",
    "pytest-django~=4.12",
    "pytest-mock~=3.15",
    "ruff~=0.15",
    "skyfield~=1.54",
]

[tool.ruff]
# 対象となるPythonバージョン
target-version = "py313"
# 1行の最大文字数 (Black準拠)
line-length = 88

[tool.ruff.lint]
# 有効にするルールセット (標準+主要プラグイン)
select = [
    "E",    # pycodestyle error
    "W",    # pycodestyle warning
    "F",    # pyflakes
    "I",    # isort (import順序整理)
    "UP",   # pyupgrade (モダンな構文へ更新)
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C90",  # mccabe (循環複雑度)
]
# 無視するルール
ignore = []

[tool.ruff.lint.isort]
# isortの設定 (必要な場合)
known-first-party = ["src"]

[tool.ruff.format]
# フォーマッタ設定 (Black互換)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
# 特定のファイルに対するルール除外
"__init__.py" = ["F401"] # 未使用インポートを許可
"tests/*" = ["S101"]      # テストコードでassertを許可

[tool.ruff.lint.pycodestyle]
max-doc-length = 88
